마이다이어리

--- a/html/coding/mypage/mypagetest.html
+++ b/html/coding/mypage/mypagetest.html
@@ -126,150 +126,183 @@
                 </div>
                 <!-- mypage__check -->
 
-
+                <div class="calendar__text03">러닝 캘린더</div>
                 <div class="calendar__wrap">
-                    <div class="calendar">
+                    <div class="calendar__textwrap">
                         <h2 class="calendar__title">May 2024</h2>
-                        <div class="calendar-header">
-                            <span class="calendar__nav">&lt;</span>
-                            <span class="calendar__nav">&gt;</span>
+                        <div class="calendar__textwrap2">
+                            <a href="#"><span class="calendar__nav">&lt;</span></a>
+                            <a href="#"></a><span class="calendar__nav">&gt;</span></a>
                         </div>
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th>SUN</th>
-                                    <th>MON</th>
-                                    <th>TUE</th>
-                                    <th>WED</th>
-                                    <th>THU</th>
-                                    <th>FRI</th>
-                                    <th>SAT</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>1</td>
-                                    <td>1</td>
-                                    <td>1</td>
-                                    <td>1</td>
-                                    <td>1</td>
-                                    <td>1</td>
-                                </tr>
-                                <tr>
-                                    <td>7</td>
-                                    <td>8</td>
-                                    <td>8</td>
-                                    <td>8</td>
-                                    <td>8</td>
-                                    <td>8</td>
-                                    <td>8</td>
-                                </tr>
-                                <tr>
-                                    <td>14</td>
-                                    <td>15</td>
-                                    <td>15</td>
-                                    <td>15</td>
-                                    <td>15</td>
-                                    <td>15</td>
-                                    <td>15</td>
-                                </tr>
-                                <tr>
-                                    <td>21</td>
-                                    <td>22</td>
-                                    <td>22</td>
-                                    <td>22</td>
-                                    <td>22</td>
-                                    <td>22</td>
-                                    <td>22</td>
-                                </tr>
-                                <tr>
-                                    <td>28</td>
-                                    <td>29</td>
-                                    <td>29</td>
-                                    <td>29</td>
-                                    <td>29</td>
-                                    <td>29</td>
-                                    <td>29</td>
-                                </tr>
-                            </tbody>
-                        </table>
                     </div>
-                    <div class="event-list">
-                        <ul>
-                            <li>2024.07.12 한강 나이트 워크</li>
-                            <li>2024.07.12 한강 나이트 워크</li>
-                            <li>2024.07.12 한강 나이트 워크</li>
-                            <li>2024.07.12 한강 나이트 워크</li>
-                            <li>2024.07.12 한강 나이트 워크</li>
-                            <li>2024.07.12 한강 나이트 워크</li>
-                            <li>2024.07.12 한강 나이트 워크</li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- calendar -->
-
-        </main>
-        <!--//main -->
-
-        <footer id="footer" role="contentinfo">
-            <div class="container">
-                <div class="footer__lnner">
-                    <div class="left">
-                        <ul>
-                            <li>멤버가입</li>
-                            <li>
-                                고객센터
-                                <ul>
-                                    <li><a href="#">공지사항</a></li>
-                                    <li><a href="#">문의하기</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                팀원
-                                <ul>
-                                    <li>박정민</li>
-                                    <li>황인지</li>
-                                    <li>안지은</li>
-                                    <li>박소현</li>
-                                </ul>
-                            </li>
-                            <li>
-                                문의 이메일
-                                <ul>
-                                    <li><a href="mailto:nicejpm@naver.com">nicejpm@naver.com</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="right">
-                        <div class="sns">
+                    <div class="calendar__cont">
+                        <div class="calendar__cont1">
+                            <table>
+                                <thead>
+                                    <tr class="thead">
+                                        <th>SUN</th>
+                                        <th>MON</th>
+                                        <th>TUE</th>
+                                        <th>WED</th>
+                                        <th>THU</th>
+                                        <th>FRI</th>
+                                        <th>SAT</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr class="tbody">
+                                        <td>1</td>
+                                        <td>1</td>
+                                        <td>1</td>
+                                        <td>1</td>
+                                        <td>1</td>
+                                        <td>1</td>
+                                        <td>1</td>
+                                    </tr>
+                                    <tr class="tbody">
+                                        <td>7</td>
+                                        <td>8</td>
+                                        <td>8</td>
+                                        <td>8</td>
+                                        <td>8</td>
+                                        <td>8</td>
+                                        <td>8</td>
+                                    </tr>
+                                    <tr class="tbody">
+                                        <td>14</td>
+                                        <td>15</td>
+                                        <td>15</td>
+                                        <td>15</td>
+                                        <td>15</td>
+                                        <td>15</td>
+                                        <td>15</td>
+                                    </tr>
+                                    <tr class="tbody">
+                                        <td>21</td>
+                                        <td>22</td>
+                                        <td>22</td>
+                                        <td>22</td>
+                                        <td>22</td>
+                                        <td>22</td>
+                                        <td>22</td>
+                                    </tr>
+                                    <tr class="tbody">
+                                        <td>28</td>
+                                        <td>29</td>
+                                        <td>29</td>
+                                        <td>29</td>
+                                        <td>29</td>
+                                        <td>29</td>
+                                        <td>29</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="event-list">
                             <ul>
-                                <li><a href="#"><span class="blind">페이스북</span></a></li>
-                                <li><a href="#"><span class="blind">트위터</span></a></li>
-                                <li><a href="#"><span class="blind">인스타그램</span></a></li>
-                                <li><a href="#"><span class="blind">유튜브</span></a></li>
+                                <li><a href="#">한강 나이트 워크</a><span>2024.07.12 </span></li>
+                                <li><a href="#">한강 나이트 워크</a><span>2024.07.12 </span></li>
+                                <li><a href="#">한강 나이트 워크</a><span>2024.07.12 </span></li>
+                                <li><a href="#">한강 나이트 워크</a><span>2024.07.12 </span></li>
+                                <li><a href="#">한강 나이트 워크</a><span>2024.07.12 </span></li>
+                                <li><a href="#">한강 나이트 워크</a><span>2024.07.12 </span></li>
+                                <li><a href="#">한강 나이트 워크</a><span>2024.07.12 </span></li>
                             </ul>
-
                         </div>
                     </div>
                 </div>
+                <!-- calendar__wrap -->
 
-                <div class="footer__bot">
-                    <div class="left_bot">
-                        <p class="copy">COPYRIGHT © WayRunMeaning. All Rights Reserved.</p>
-                    </div>
-                    <div class="right_bot">
-                        <ul>
-                            <li><a href="#">이용약관</a></li>
-                            <li><a href="#">위치 기반 서비스 약관</a></li>
-                            <li><a href="#">개인정보처리방침</a></li>
-                        </ul>
+                <div class="mydiary">
+                    <div class="mydiary__title">마이 다이어리</div>
+                    <div class="mydiary__wrap">
+                        <div class="mydiary1">
+                            <div class="mydiary1-1">
+                                <p class="mydiary__title2"></p>
+                                <span class="mydiary__text"></span>
+                            </div>
+                            <div class="mydiary1-2">
+                                <p class="mydiary__title2"></p>
+                            </div>
+                        </div>
+                        <div class="mydiary2">
+                            <div class="mydiary2-1"></div>
+                            <div class="mydiary2-2"></div>
+                            <div class="mydiary2-3"></div>
+                        </div>
+                        <div class="mydiary3">
+                            <div class="mydiary3-1"></div>
+                            <div class="mydiary3-2"></div>
+                        </div>
+                        <div class="mydiary4">
+                        </div>
                     </div>
                 </div>
             </div>
-        </footer>
-        <!-- //footer -->
+    </div>
+    <!-- calendar -->
+
+    </main>
+    <!--//main -->
+
+    <footer id="footer" role="contentinfo">
+        <div class="container">
+            <div class="footer__lnner">
+                <div class="left">
+                    <ul>
+                        <li>멤버가입</li>
+                        <li>
+                            고객센터
+                            <ul>
+                                <li><a href="#">공지사항</a></li>
+                                <li><a href="#">문의하기</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            팀원
+                            <ul>
+                                <li>박정민</li>
+                                <li>황인지</li>
+                                <li>안지은</li>
+                                <li>박소현</li>
+                            </ul>
+                        </li>
+                        <li>
+                            문의 이메일
+                            <ul>
+                                <li><a href="mailto:nicejpm@naver.com">nicejpm@naver.com</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="right">
+                    <div class="sns">
+                        <ul>
+                            <li><a href="#"><span class="blind">페이스북</span></a></li>
+                            <li><a href="#"><span class="blind">트위터</span></a></li>
+                            <li><a href="#"><span class="blind">인스타그램</span></a></li>
+                            <li><a href="#"><span class="blind">유튜브</span></a></li>
+                        </ul>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer__bot">
+                <div class="left_bot">
+                    <p class="copy">COPYRIGHT © WayRunMeaning. All Rights Reserved.</p>
+                </div>
+                <div class="right_bot">
+                    <ul>
+                        <li><a href="#">이용약관</a></li>
+                        <li><a href="#">위치 기반 서비스 약관</a></li>
+                        <li><a href="#">개인정보처리방침</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- //footer -->
     </div>
 </body>
 
