마이 다이어리

--- a/html/coding/mypage/mypagetest.html
+++ b/html/coding/mypage/mypagetest.html
@@ -218,23 +218,43 @@
                     <div class="mydiary__wrap">
                         <div class="mydiary1">
                             <div class="mydiary1-1">
-                                <p class="mydiary__title2"></p>
-                                <span class="mydiary__text"></span>
+                                <p class="mydiary__title2">마라톤 접수일</p>
+                                <span class="mydiary__text">D-6</span>
                             </div>
                             <div class="mydiary1-2">
-                                <p class="mydiary__title2"></p>
+                                <p class="mydiary__title2">오늘 하루도<br> 힘차게<br> 달려보자구요</p>
                             </div>
                         </div>
                         <div class="mydiary2">
-                            <div class="mydiary2-1"></div>
-                            <div class="mydiary2-2"></div>
-                            <div class="mydiary2-3"></div>
+                            <div class="mydiary2-1">
+                                <p class="mydiary__title2">내 페이스</p>
+                                <span class="mydiary__text">6.2</span>
+                            </div>
+                            <div class="mydiary2-2">
+                                <p class="mydiary__title2">걷기 페이스</p>
+                                <span class="mydiary__text">12</span>
+                            </div>
+                            <div class="mydiary2-3">
+                                <p class="mydiary__title2">최고 기록</p>
+                                <span class="mydiary__text">12km</span>
+                            </div>
                         </div>
                         <div class="mydiary3">
-                            <div class="mydiary3-1"></div>
-                            <div class="mydiary3-2"></div>
+                            <div class="mydiary3-1">
+                                <p class="mydiary__title2">이번달 참여 마라톤</p>
+                                <span class="mydiary__text1">한강 나이트워크</span>
+                                <span class="mydiary__text">D-6</span>
+                            </div>
+                            <div class="mydiary3-2">
+                                <p class="mydiary__title2">최고 기록</p>
+                                <span class="mydiary__text">42ㅏㅡ</span>
+                            </div>
                         </div>
                         <div class="mydiary4">
+                            <div class="mydiary4-1">
+                                <p class="mydiary__title2">마라톤 접수일</p>
+                                <span class="mydiary__text">D-6</span>
+                            </div>
                         </div>
                     </div>
                 </div>
