--- a/html/coding/mypage/mypagetest.html
+++ b/html/coding/mypage/mypagetest.html
@@ -20,7 +20,6 @@
     <link href="../assets/ico/favicon.svg" rel="favicon icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/style.css">
-
     <title>WayRunMeaning : 러닝 & 마라톤</title>
 </head>
 
@@ -218,6 +217,7 @@
                     <div class="mydiary__wrap">
                         <div class="mydiary1">
                             <div class="mydiary1-1">
+                                <img src="/html/coding/assets/img/mypage/mydiary1.svg" alt="">
                                 <p class="mydiary__title2">마라톤 접수일</p>
                                 <span class="mydiary__text">D-6</span>
                             </div>
@@ -247,17 +247,21 @@
                             </div>
                             <div class="mydiary3-2">
                                 <p class="mydiary__title2">최고 기록</p>
-                                <span class="mydiary__text">42ㅏㅡ</span>
+                                <span class="mydiary__text1">한강 나이트워크</span>
+                                <span class="mydiary__text">42km</span>
                             </div>
                         </div>
                         <div class="mydiary4">
                             <div class="mydiary4-1">
-                                <p class="mydiary__title2">마라톤 접수일</p>
-                                <span class="mydiary__text">D-6</span>
+                                <div class="mypage__textwrap">
+                                    <p class="mydiary__title3">JUST DO RUN</p>
+                                </div>
+                                <img src="/html/coding/assets/img/mypage/just.svg" alt="run">
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- mydiary -->
             </div>
     </div>
     <!-- calendar -->
