--- a/html/coding/aboutpage/aboutpage.html
+++ b/html/coding/aboutpage/aboutpage.html
@@ -77,6 +77,7 @@
                             </span>
                         </div>
                         <!-- about__banner1-1 -->
+
                         <div class="about__banner1-2">
                             <div class="aboutlogo__img">
                                 <img src="../assets/img/about/banner1-2.svg" alt="로고1">
@@ -95,6 +96,123 @@
                 </div>
             </div>
             <!-- //about__banner -->
+
+
+            <div class="about__tape">
+                <img src="../assets/img/about/about_tape.svg" alt="jpg">
+            </div>
+            <!-- about__tape -->
+
+            <div class="motto">
+                <div class="container">
+                    <div class="motto__container">
+
+                        <h1 class="motto__title">
+                            Our Motto
+                        </h1>
+                        <!-- motto__title -->
+
+                        <div class="motto__flex">
+                            <div class="motto__cont1">
+                                <!-- <div class="motto__con1-1"> -->
+                                <p class="motto__text1">
+                                    신발끈을 매고 <br>
+                                    함께 길을 나서요!
+                                </p>
+                                <div class="motto__logo">
+                                    <img src="../assets/img/about/moto_logo.svg" alt="jpg">
+                                </div>
+                                <!-- </div> -->
+                            </div>
+
+                            <div class="motto__cont2">
+                                <img src="../assets/img/about/moto_img1.png" alt="jpg">
+                            </div>
+                        </div>
+                        <!-- motto__flex -->
+
+                        <div class="moto__welcome">
+                            <div class="welcom1"></div>
+                            <div class="welcom2">
+                                <p class="welcom2__num">(01)</p>
+                                <span class="welcom2__text">"저희 마라톤 커뮤니티에 오신 것을 환영합니다! <br>
+                                    우리는 장거리 레이싱에 대한 <br>
+                                    사랑을 공유하기 위해 헌신하는 열정적인 러너들의 모임입니다.
+                                </span>
+                            </div>
+                        </div>
+                        <!-- moto__welcome -->
+
+                        <div class="moto__info">
+                            <div class="moto__info1">
+                                <img src="../assets/img/about/moto_img2.png" alt="jpg">
+                                <div class="moto__textwrap">
+                                    <p class="m__num">(02)</p>
+                                    <p class="m__text">
+                                        당신이 경험이 풍부한 마라토너이든 <br>
+                                        막 시작한 마라토너이든,
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="moto__info2">
+                                <img src="../assets/img/about/moto_img3.png" alt="jpg">
+                                <div class="moto__textwrap">
+                                    <p class="m__num">(03)</p>
+                                    <p class="m__text">
+                                        우리와 함께 목표를 향해 노력하는 동안<br>
+                                        서로 지원, 조언 및 동지로 참여하세요.</p>
+                                </div>
+                            </div>
+                            <div class="moto__info3">
+                                <img src="../assets/img/about/moto_img4.png" alt="jpg">
+                                <div class="moto__textwrap">
+                                    <p class="m__num">(04)</p>
+                                    <p class="m__text">
+                                        웨이런미닝과 함께 달릴 준비 되셨나요?
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- moto__info -->
+
+                        <div class="moto__chracter">
+                            <div class="moto__chracterImg">
+                                <img src="../assets/img/about/moto_ character.svg" alt="svg">
+                            </div>
+                            <div class="moto__textwrap">
+                                <p class="m__num">(05)</p>
+                                <p class="m__text">
+                                    chracter
+                                </p>
+                            </div>
+                        </div>
+                        <!-- moto__chracter -->
+                    </div>
+                    <!-- motto__container -->
+                </div>
+                <!-- container -->
+            </div>
+            <!-- motto -->
+
+            <div class="goal">
+                <div class="container">
+                    <div class="goal__title">
+                        <h1 class="goal__title01">GOal</h1>
+                        <h1 class="goal__title02">목표</h1>
+                    </div>
+                    <!-- goal__title -->
+                    <div class="goal__contents">
+                        <div class="goal__content1"></div>
+                        <div class="goal__content2"></div>
+                        <div class="goal__content3"></div>
+                    </div>
+                    <!-- goal__contents -->
+                </div>
+            </div>
+        </main>
+        <!-- main -->
+
+
         </main>
         <!-- //main -->
 
