--- a/html/coding/aboutpage/aboutpage.html
+++ b/html/coding/aboutpage/aboutpage.html
@@ -61,8 +61,9 @@
                         <img src="../assets/img/about/mainabout.svg" alt="이미지">
                     </div>
                 </div>
+                <!-- //about__title -->
             </div>
-            <!-- //about__title -->
+
 
 
             <div class="about__banner">
@@ -96,7 +97,6 @@
                 </div>
             </div>
             <!-- //about__banner -->
-
 
             <div class="about__tape">
                 <img src="../assets/img/about/about_tape.svg" alt="jpg">
@@ -201,20 +201,66 @@
                         <h1 class="goal__title02">목표</h1>
                     </div>
                     <!-- goal__title -->
+
+
                     <div class="goal__contents">
-                        <div class="goal__content1"></div>
-                        <div class="goal__content2"></div>
-                        <div class="goal__content3"></div>
+                        <div class="goal__content1">
+                            <div class="goal__text01">
+                                마라톤 <br>
+                                일정을 <br>
+                                확인하고
+                            </div>
+                            <div class="goal__text02">
+                                marathon schedule check
+                            </div>
+                            <img src="/html/coding/assets/img/about/goal_1.svg" alt="jpg">
+                        </div>
+                        <!-- goal__content1 -->
+
+                        <div class="goal__content2">
+                            <div class="goal__text01">
+                                러너들과 <br>
+                                소통하며 <br>
+                                기록하고
+                            </div>
+                            <div class="goal__text02">
+                                Communicate and record with runners
+                            </div>
+                            <img src="/html/coding/assets/img/about/goal_2.svg" alt="jpg">
+                        </div>
+                        <!-- goal__content2 -->
+
+                        <div class="goal__content3">
+                            <div class="goal__text01">
+                                마라톤에 <br>
+                                참여해 <br>
+                                빛나기를!
+                            </div>
+                            <div class="goal__text02">
+                                Participate in the marathon and shine
+                            </div>
+                            <img src="/html/coding/assets/img/about/goal_3.svg" alt="jpg">
+                        </div>
+                        <!-- goal__content3 -->
                     </div>
-                    <!-- goal__contents -->
                 </div>
             </div>
+            <!-- goal -->
+
+            <div class="mystory">
+                <div class="container">
+                    <div class="mystory__wrap">
+                        <h2 class="story__title">마이 페이지를 통해 <br>
+                            나만의 마라톤 스토리를 채워가 보세요!
+                        </h2>
+                        <img src="/html/coding/assets/img/about/story_img.svg" alt="jpg">
+                        <a href="/html/coding/signup/signup.html">회원가입 하러가기</a>
+                    </div>
+                </div>
+            </div>
+            <!-- mystory -->
         </main>
         <!-- main -->
-
-
-        </main>
-        <!-- //main -->
 
         <footer id="footer" role="contentinfo">
             <div class="container">
