--- a/html/coding/detailpage/detailpage.html
+++ b/html/coding/detailpage/detailpage.html
@@ -56,49 +56,51 @@
                 <div class="detailwrap">
                     <div class="detail">
                         <img src="/html/coding/assets/img/detailpage/detailposter.png" alt="마라톤 포스터">
-                        <div class="detail__tittle">
-                            <h3 class="detail__h3">2024 댕댕트레킹</h3>
-                            <a class="detail__heart" href="#"><img src="/html/coding/assets/img/detailpage/heart.svg"
-                                    alt="#"></a>
-                            <a class="detail__share" href="#"><img src="/html/coding/assets/img/detailpage/share.png"
-                                    alt="#"></a>
-                        </div>
-                        <!-- detail__tittle -->
+                        <div class="detailcontents">
+                            <div class="detail__tittle">
+                                <h3 class="detail__h3">2024 댕댕트레킹</h3>
+                                <a class="detail__heart" href="#"><img
+                                        src="/html/coding/assets/img/detailpage/heart.svg" alt="#"></a>
+                                <a class="detail__share" href="#"><img
+                                        src="/html/coding/assets/img/detailpage/share.png" alt="#"></a>
+                            </div>
+                            <!-- detail__tittle -->
 
-                        <div class="detail__text">
-                            <div class="detail__info">
-                                <span class="detail__cont">날짜</span> <span class="detail__cont1">24.05.17 (금) -
-                                    24.05.19
-                                    (일)</span>
-                            </div>
-                            <div class="detail__info">
-                                <span class="detail__cont">지역</span> <span class="detail__cont1"></span>강원도 >
-                                정선군</span>
-                            </div>
-                            <div class="detail__info">
-                                <span class="detail__cont">장소</span> <span class="detail__cont1"></span>하이원 리조트(하이캐슬,
-                                메이힐스)</span>
-                            </div>
-                            <div class="detail__info">
-                                <span class="detail__cont">주관</span> <span class="detail__cont1"></span>(주)1986프로덕션,
-                                (주)브룩컴퍼니</span>
-                            </div>
-                            <div class="detail__info">
-                                <span class="detail__cont">비용</span>
-                                <ul>
-                                    <li>일반 참가권: 55,000원</li>
-                                    <li>3+1 참가권: 165,000원</li>
-                                    <li>장애인 할인: 44,000원</li>
-                                    <li>학생 할인: 44,000원</li>
-                                    <li>(7세 이하 미취학 아동 무료 입장 - 보호자 동반 시)</li>
-                                </ul>
-                            </div>
-                            <div class="detail__btn">
-                                <a href="#">웹사이트 바로가기</a>
+                            <div class="detail__text">
+                                <div class="detail__info">
+                                    <span class="detail__cont">날짜</span> <span class="detail__cont1">24.05.17 (금) -
+                                        24.05.19
+                                        (일)</span>
+                                </div>
+                                <div class="detail__info">
+                                    <span class="detail__cont">지역</span> <span class="detail__cont1"></span>강원도 >
+                                    정선군</span>
+                                </div>
+                                <div class="detail__info">
+                                    <span class="detail__cont">장소</span> <span class="detail__cont1"></span>하이원
+                                    리조트(하이캐슬,
+                                    메이힐스)</span>
+                                </div>
+                                <div class="detail__info">
+                                    <span class="detail__cont">주관</span> <span class="detail__cont1"></span>(주)1986프로덕션,
+                                    (주)브룩컴퍼니</span>
+                                </div>
+                                <div class="detail__info">
+                                    <span class="detail__cont">비용</span>
+                                    <ul>
+                                        <li>일반 참가권: 55,000원</li>
+                                        <li>3+1 참가권: 165,000원</li>
+                                        <li>장애인 할인: 44,000원</li>
+                                        <li>학생 할인: 44,000원</li>
+                                        <li>(7세 이하 미취학 아동 무료 입장 - 보호자 동반 시)</li>
+                                    </ul>
+                                </div>
+                                <div class="detail__btn">
+                                    <a href="#">웹사이트 바로가기</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <!-- detail2 -->
                 </div>
             </div>
         </main>
