--- a/html/coding/badge/badge.html
+++ b/html/coding/badge/badge.html
@@ -88,7 +88,8 @@
                         </div>
                         <!-- badge__con4 -->
                     </div>
-                    <!-- badge__contents -->
+                    <!-- badge__contents1 -->
+
                     <div class="badge__contents">
                         <div class="badge__con1">
                             <a href="#">
@@ -119,7 +120,8 @@
                         </div>
                         <!-- badge__con4 -->
                     </div>
-                    <!-- badge__contents -->
+                    <!-- badge__contents2 -->
+
                     <div class="badge__contents">
                         <div class="badge__con1">
                             <a href="#">
@@ -150,7 +152,8 @@
                         </div>
                         <!-- badge__con4 -->
                     </div>
-                    <!-- badge__contents -->
+                    <!-- badge__contents3 -->
+
                     <div class="badge__contents">
                         <div class="badge__con1">
                             <a href="#">
@@ -181,13 +184,14 @@
                         </div>
                         <!-- badge__con4 -->
                     </div>
-                    <!-- badge__contents -->
+                    <!-- badge__contents4 -->
 
                     <div class="badge__popup">
                         <div class="badge__popup1">
                             <img src="/html/coding/assets/img/badge/badge.svg" alt="badge">
                             <h3 class="badge__popup__tittle">만나서 반가워</h3>
                             <!-- badge__popup__tittle -->
+
                             <p class="badge__popup__text">
                                 웨이런미닝에 가입하신 걸 축하드려요! <br>
                                 함꼐한지 1일차<br>
@@ -197,10 +201,33 @@
                             <span class="badge__popup__date">2024.04.21</span>
                             <!-- badge__popup__date -->
                         </div>
+                        <!-- badge__popup1 -->
+
                         <div class="badge__popup2">
-                            <img src="/html/coding/assets/img/badge/imgsave.png" alt="badge">
-                            <a href="#">이미지 저장</a>
+                            <div class="imgSave">
+                                <img src="/html/coding/assets/img/badge/imgsave.png" alt="badge">
+                                <a href="#">이미지 저장</a>
+                            </div>
+                            <!-- imgSave -->
+
+                            <div class="close__btn">
+                                <svg width="50" height="50" viewBox="0 0 50 50" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#clip0_986_826)">
+                                        <path
+                                            d="M7.32459 42.6746C4.93683 40.3684 3.03228 37.6098 1.72205 34.5597C0.411828 31.5096 -0.277828 28.2291 -0.306673 24.9096C-0.335519 21.5901 0.297024 18.2981 1.55405 15.2257C2.81107 12.1533 4.6674 9.36203 7.01471 7.01471C9.36203 4.6674 12.1533 2.81107 15.2257 1.55405C18.2981 0.297024 21.5901 -0.335519 24.9096 -0.306673C28.2291 -0.277828 31.5096 0.411828 34.5597 1.72205C37.6098 3.03228 40.3684 4.93683 42.6746 7.32459C47.2285 12.0396 49.7484 18.3547 49.6914 24.9096C49.6345 31.4645 47.0053 37.7348 42.3701 42.3701C37.7348 47.0053 31.4645 49.6345 24.9096 49.6914C18.3547 49.7484 12.0396 47.2285 7.32459 42.6746ZM10.8496 39.1496C14.6024 42.9024 19.6923 45.0107 24.9996 45.0107C30.3069 45.0107 35.3968 42.9024 39.1496 39.1496C42.9024 35.3968 45.0107 30.3069 45.0107 24.9996C45.0107 19.6923 42.9024 14.6024 39.1496 10.8496C35.3968 7.09677 30.3069 4.98847 24.9996 4.98847C19.6923 4.98847 14.6024 7.09677 10.8496 10.8496C7.09677 14.6024 4.98847 19.6923 4.98847 24.9996C4.98847 30.3069 7.09677 35.3968 10.8496 39.1496ZM35.5996 17.9246L28.5246 24.9996L35.5996 32.0746L32.0746 35.5996L24.9996 28.5246L17.9246 35.5996L14.3996 32.0746L21.4746 24.9996L14.3996 17.9246L17.9246 14.3996L24.9996 21.4746L32.0746 14.3996L35.5996 17.9246Z"
+                                            fill="#FAF1E7" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_986_826">
+                                            <rect width="50" height="50" fill="white" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                            </div>
+                            <!-- imgClose -->
                         </div>
+                        <!-- badge__popup2 -->
                     </div>
                 </div>
             </div>
