--- a/html/coding/badge/badge.html
+++ b/html/coding/badge/badge.html
@@ -60,30 +60,30 @@
 
                     <div class="badge__contents">
                         <div class="badge__con1">
-                            <a href="#">
-                                <img src="/html/coding/assets/img/badge/badge.svg" alt="badge">
-                                <span class="badge__text">만나서 반가워</span>
+                            <a class="openPopup" href="#">
+                                <img class="openPopup" src="/html/coding/assets/img/badge/badge.svg" alt="badge">
+                                <span class="openPopup" class="badge__text">만나서 반가워</span>
                             </a>
                         </div>
                         <!-- badge__con1 -->
                         <div class="badge__con2">
-                            <a href="#">
-                                <img src="/html/coding/assets/img/badge/badge1.svg" alt="badge">
-                                <span class="badge__text">출석 요정</span>
+                            <a class="openPopup" href="#">
+                                <img class="openPopup" src="/html/coding/assets/img/badge/badge1.svg" alt="badge">
+                                <span class="openPopup" class="badge__text">출석 요정</span>
                             </a>
                         </div>
                         <!-- badge__con -->
                         <div class="badge__con3">
-                            <a href="#">
-                                <img src="/html/coding/assets/img/badge/badge2.svg" alt="badge">
-                                <span class="badge__text">7일 연속 출석</span>
+                            <a class="openPopup" href="#">
+                                <img class="openPopup" src="/html/coding/assets/img/badge/badge2.svg" alt="badge">
+                                <span class="openPopup" class="badge__text">7일 연속 출석</span>
                             </a>
                         </div>
                         <!-- badge__con3 -->
                         <div class="badge__con4">
-                            <a href="#">
-                                <img src="/html/coding/assets/img/badge/badge3.svg" alt="badge">
-                                <span class="badge__text">커뮤니티 첫 게시물</span>
+                            <a class="openPopup" href="#">
+                                <img class="openPopup" src="/html/coding/assets/img/badge/badge3.svg" alt="badge">
+                                <span class="openPopup" class="badge__text">커뮤니티 첫 게시물</span>
                             </a>
                         </div>
                         <!-- badge__con4 -->
@@ -229,6 +229,7 @@
                         </div>
                         <!-- badge__popup2 -->
                     </div>
+                    <!-- badge__popup -->
                 </div>
             </div>
             <!-- container -->
@@ -294,6 +295,12 @@
         </footer>
         <!-- //footer -->
     </div>
+    <script src="../assets/js/badge.js"></script>
+    <!-- <script>
+        document.querySelector(".badge__popup").addEventListener("click", () => {
+            alert("ddd")
+        })
+    </script> -->
 </body>
 
 </html>
